assets/styles.scss
@font-face {
  font-family: 'RockSalt';
  src: url(/assets/fonts/RockSalt-Regular.ttf);
}

$chakras: (
  "root": #e33f3f,
  "sacral": #ff7d00,
  "solar": #ffdb4d,
  "heart": #4caf50,
  "throat": #2196f3,
  "third-eye": #673ab7,
  "crown": #9c27b0,
  "soul-star": #ffffff,
  "earth-star": #000000
);

.circle {
  width: 32px;
  height: 32px;
  border-radius: 100%;
  margin: 0.5rem 0.5rem;
}

.xs {
  width: 32px;
  height: 32px;

}

.xxl {
  width: 128px;
  height: 128px;
  margin: 2rem auto;
}

.s {
  width: 44px;
  height: 44px;
}

.l {
  width: 54px;
  height: 54px;
}

.xl {
  width: 64px;
  height: 64px;
}

.m {
  width: 54px;
  height: 32px;
  
}
.m-auto {
  margin: 2rem auto;
}


.circle-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.center {
  text-align: center;
}

html, body {
  padding: 0;
  margin: 0;
}
#container {
  font-family: 'RockSalt';
  font-size: medium;
  transition: background-color 0.3s ease;
  background-color: map-get($chakras, "earth-star");
  color: map-get($chakras, "soul-star");
  position: absolute;
  width: 100%;
  top: 0;
  border-radius: 0;
}

header, section {
  border-radius: 1em;
}

header {
  max-width: 400px;
  margin: auto;
}

header div {
  padding: 1em;
}

.content {
  padding: 0.1em 1em;
}

h1 {
  color: map-get($chakras, "crown");
  font-size: xx-large; 
}

h2 {
  color: map-get($chakras, "third-eye");
  font-size: x-large;
}

h3 {
  color: map-get($chakras, "throat");
  font-size: large;
}

h4 {
  color: map-get($chakras, "heart");
  font-size: large;
}

p {
  line-height: 2;
}

a {
  color: map-get($chakras, "throat");
  text-decoration: none;
  transition: color 0.3s;
}

a:hover {
  color: map-get($chakras, "third-eye");
}

.row {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.space-around {
  justify-content: space-around;
}
.card {
  width: 256px;
  padding: 2em;
  margin: 1em auto;
  border-radius: 50%;
  text-align: center;
}

.card img {
  max-width: 100%;
  border-radius: 8px;
}

footer {
  text-align: center;
  margin-top: 40px;
  color: map-get($chakras, "solar");
  text-shadow: 0px 0px 5px map-get($chakras, "root");
}

/* CSS classes for each chakra */
@each $chakra, $color in $chakras {
  .#{$chakra} {
    box-shadow: 0px 0px 20px $color;
  }
  @keyframes #{$chakra}-shadowPulse {
    0% {
      box-shadow: inset 0px 0px 5px rgba($color, 0);
    }
    50% {
      box-shadow: inset 0px 0px 10px $color;
    }
    100% {
      box-shadow: inset 0px 0px 5px rgba($color, 0);
    }
}


  .#{$chakra}-animated {
    animation: #{$chakra}-shadowPulse 2s infinite;
  }
}



.chakra-container {
  position: relative;
  width: 260px; 
  height: 260px; 

  .center-image {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  $total-chakras: length(map-keys($chakras)) - 2;
  $rotation-step: 360deg / $total-chakras;
  $current-rotation: 0deg;

  @each $chakra, $color in $chakras {
    .#{$chakra}-item {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%) rotate($current-rotation) translateY(-100px) rotate(-$current-rotation);
    }
    $current-rotation: $current-rotation + $rotation-step;
  }
}



#themeToggle {
  display: none; // Hide the checkbox
  padding: 0;
  margin: 0;

  &:not(:checked) + label #sunIcon {
    display: block;
    filter: invert(100%); 

  }
  
  &:checked + label #sunIcon {
    display: none;
  }

  &:not(:checked) + label #moonIcon {
    display: none;
  }

  &:checked + label #moonIcon {
    display: block;
  }

  &:checked ~ #container {
    background-color: map-get($chakras, "soul-star");
    color: map-get($chakras, "earth-star");
  }
}

label[for="themeToggle"] {
  position: fixed;
  bottom: 20px;
  left: 20px;
  cursor: pointer;
  z-index: 1000;

  img {
    width: 30px;
    height: 30px;
  }
}

